# micro-timer-native

./: .gitignore  README.md  mix.exs
.github/workflows/: release.yml
config/: dev.exs  release.exs
lib/: micro_timer.ex  micro_timer_native.ex  test.ex
lib/micro_timer/: native.ex  resource_handle.ex
native/timer/: Cargo.toml
native/timer/.cargo/: config
native/timer/src/: lib.rs
test/: micro_timer_native_test.exs
