[package]
name = "timer"
version = "0.1.0"
edition = "2021"
author = "Massimo Ronca <mr@massimoronca.it>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "timer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# atomic-interval = "0.1.3"
futures = "0.3"
rustler = "0.26.0"
# tokio = { version = "1.22.0", features = ["rt", "time"] }

[build]
incremental = true

[profile.release]
strip = "debuginfo"
