[package]
name = "timer"
version = "0.1.0"
edition = "2021"
authors = ["Massimo Ronca <mr@massimoronca.it>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "timer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.6"
rustler = "0.26.0"

[profile.release]
strip = "debuginfo"
